resolved patch/vulnerability and added lint

--- a/packages/moleculer-console-tracer/package.json
+++ b/packages/moleculer-console-tracer/package.json
@@ -30,11 +30,14 @@
     "benchmarkify": "2.1.0",
     "coveralls": "3.0.2",
     "eslint": "5.1.0",
+    "eslint-plugin-node": "9.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-security": "1.4.0",
     "jest": "23.3.0",
     "jest-cli": "23.3.0",
     "lolex": "2.7.1",
     "moleculer": "0.13.0",
-    "moleculer-docgen": "0.2.1",
+    "moleculer-docgen": "0.2.2",
     "moleculer-web": "0.8.0",
     "nodemon": "1.17.5",
     "npm-check": "5.7.1"
