--- a/packages/moleculer-console-tracer/package.json
+++ b/packages/moleculer-console-tracer/package.json
@@ -8,6 +8,7 @@
     "ci": "jest --watch",
     "test": "jest --coverage",
     "lint": "eslint --ext=.js src test",
+    "lint:fix": "eslint --ext=.js --fix src",
     "deps": "npm-check -u",
     "readme": "node node_modules/moleculer-docgen/index.js -t README.md src/index.js",
     "coverall": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
@@ -27,18 +28,18 @@
     "moleculer": ">=0.12.0 || >=0.13.0"
   },
   "devDependencies": {
-    "benchmarkify": "2.1.0",
+    "benchmarkify": "^2.1.2",
     "coveralls": "3.0.2",
     "eslint": "5.1.0",
     "eslint-plugin-node": "9.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-security": "1.4.0",
-    "jest": "23.3.0",
-    "jest-cli": "23.3.0",
+    "jest": "24.8.0",
+    "jest-cli": "24.8.0",
     "lolex": "2.7.1",
-    "moleculer": "0.13.0",
+    "moleculer": "^0.13.9",
     "moleculer-docgen": "0.2.2",
-    "moleculer-web": "0.8.0",
+    "moleculer-web": "0.9.0-beta6",
     "nodemon": "1.17.5",
     "npm-check": "5.7.1"
   },
@@ -54,7 +55,7 @@
   },
   "dependencies": {
     "chalk": "2.4.1",
-    "lodash": "4.17.10",
+    "lodash": "^4.17.15",
     "slice-ansi": "1.0.0",
     "tiny-human-time": "1.2.0"
   }
